--- a/index-3.html
+++ b/index-3.html
@@ -9,7 +9,7 @@
         <meta name="author" content="modinatheme">
        <meta name="description" content="Homedeal">
         <!-- ======== Page title ============ -->
-        <title>Homedeal</title>
+        <title>WGC</title>
         <!--<< Favcion >>-->
         <link rel="shortcut icon" href="assets/img/preloader.svg">
         <!--<< Bootstrap min.css >>-->
