--- a/index-3.html
+++ b/index-3.html
@@ -356,7 +356,8 @@
                     </div>
                     <div class="service-box-items style-2 wow fadeInUp" data-wow-delay=".9s">
                         <div class="icon">                              
-                            <i class="fa fa-money" aria-hidden="true"></i>
+                            <i class="fa fa-money-bill"></i>
+
                         </div>
                         <div class="content">
                             <h6>
