--- a/index-3.html
+++ b/index-3.html
@@ -50,7 +50,7 @@
                 <div class="offcanvas__top  d-flex justify-content-between align-items-center">
                     <div class="offcanvas__logo">
                         <a href="index-3.html">
-                            <img src="assets/img/logo/logo1111 (1) (2).png" alt="logo-img">
+                            <img src="assets/img/logo/logo1111 (1) (3).png" alt="logo-img">
                         </a>
                     </div>
                     <div class="offcanvas__close">
@@ -146,7 +146,7 @@
                 <div class="header-main">
                     <div class="logo" style="z-index: 999;">
                         <a href="#" class="header-logo">
-                            <img src="assets/img/logo/logo1111 (1) (2).png" alt="logo-img">
+                            <img src="assets/img/logo/logo1111 (1) (3).png" alt="logo-img">
                         </a>
                     </div>
                     <div class="header-left">
@@ -421,7 +421,7 @@
                     <div class="col-lg-6">
                         <div class="about-image-items">
                             <div class="circle-shape">
-                                <img src="assets/img/about/circle2.png" alt="img" class="text-circle">
+                                <img src="assets/img/about/circle2 (1).png" alt="img" class="text-circle">
                                 <div class="award-img">
                                     <img src="assets/img/about/award.png" alt="img">
                                 </div>
@@ -1005,7 +1005,7 @@
                                 <div class="single-footer-widget">
                                     <div class="widget-head">
                                         <a href="index-3.html">
-                                        <img src="assets/img/logo/logo1111 (1) (2).png" alt="logo-img">
+                                        <img src="assets/img/logo/logo1111 (1) (3).png" alt="logo-img">
                                         </a>
                                     </div>
                                     <div class="footer-content">
