--- a/index-3.html
+++ b/index-3.html
@@ -1203,10 +1203,10 @@ section.hero-section.hero-3 {
     }
 }
 .header-3 .mega-menu-wrapper .header-main .header-right .header__hamburger .sidebar__toggle .header-bar span:first-child {
-    background: green !important;
+    background: #0d75bc !important;
 }
 .header-3 .mega-menu-wrapper .header-main .header-right .header__hamburger .sidebar__toggle .header-bar span {
-    background: green !important;
+    background: #0d75bc !important;
 }
 
 .header-main .main-menu ul li {
