--- a/index-3.html
+++ b/index-3.html
@@ -1156,12 +1156,20 @@
                                     </a>
                                 </li>
                             </ul>
+                            <div class="select-dropdown001">
+                                <select>
+                                    <option value="Option 1">First Option</option>
+                                    <option value="Option 2">2nd Option</option>
+                                    <option value="Option 3">Option Number 3</option>
+                                </select>
+                            </div>
                         </div>
+                        
                     </div>
                     <a href="#" id="scrollUp" class="scroll-icon">
                         <i class="far fa-arrow-up"></i>
                     </a>
-                </div>
+                
             </footer>
 
 <style>
