--- a/index-3.html
+++ b/index-3.html
@@ -1158,9 +1158,10 @@
                             </ul>
                             <div class="select-dropdown001">
                                 <select>
-                                    <option value="Option 1">First Option</option>
-                                    <option value="Option 2">2nd Option</option>
-                                    <option value="Option 3">Option Number 3</option>
+                                    <option value="Option 1">English</option>
+                                    <option value="Option 2">French</option>
+                                    <option value="Option 3">Spanish</option>
+                                    <option value="Option 3">German</option>
                                 </select>
                             </div>
                         </div>
