--- a/index-3.html
+++ b/index-3.html
@@ -1260,7 +1260,7 @@ section.hero-section.hero-3 {
          <!--<< Magnific Popup Js >>-->
          <script src="assets/js/jquery.magnific-popup.min.js"></script>
          <!--<< Wow Animation Js >>-->
-         <!-- <script src="assets/js/wow.min.js"></script> -->
+         <script src="assets/js/wow.min.js"></script>
          <!--<< Circle Progress Js >>-->
          <script src="assets/js/circle-progress.js"></script>
          <!--<< Main.js >>-->
