--- a/index-3.html
+++ b/index-3.html
@@ -145,7 +145,7 @@
             <div class="mega-menu-wrapper">
                 <div class="header-main">
                     <div class="logo" style="z-index: 999;">
-                        <a href="#" class="header-logo">
+                        <a href="index-3.html" class="header-logo">
                             <img src="assets/img/logo/logo1111 (1) (3).png" alt="logo-img">
                         </a>
                     </div>
