--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
                                 <nav id="mobile-menu">
                                     <ul>
                                         <li class="has-dropdown active menu-thumb">
-                                            <a href="#">
+                                            <a href="index-3.html">
                                             Home                                            
                                             </a>
                                                       
