--- a/contact.html
+++ b/contact.html
@@ -129,14 +129,13 @@
                                                       
                                         </li>                                       
                                         <li>
-                                            <a href="#">About</a>
+                                            <a href="about.html">About</a>
                                         </li>
                                         <li>
-                                            <a href="#">Services <i class="fas fa-angle-down"></i>
+                                            <a href="service.html">Services <i class="fas fa-angle-down"></i>
                                           </a>
                                             <ul class="submenu">
-                                                <li><a href="#">Services</a></li>
-                                                <li><a href="#">Service Details</a></li>
+                                                <li><a href="service-details.html">Service Details</a></li>
                                             </ul>
                                         </li>
                                         <li class="has-dropdown">
