--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                                                       
                                         </li>                                       
                                         <li>
-                                            <a href="#">About</a>
+                                            <a href="about.html">About</a>
                                         </li>
                                         <li>
                                             <a href="service.html">Services <i class="fas fa-angle-down"></i>
