--- a/index-3.html
+++ b/index-3.html
@@ -155,11 +155,27 @@
                         <div class="header-button">
                             <a href="#" class="theme-btn theme-btn-2">
                                 <span>
-                                    contact us
+                                    Login
                                     <i class="fas fa-chevron-right"></i>
                                 </span>
                              </a>
                         </div>
+                        <div class="header-button">
+                            <a href="#" class="theme-btn theme-btn-2">
+                                <span>
+                                    Join as a Professional
+                                    <i class="fas fa-chevron-right"></i>
+                                </span>
+                             </a>
+                        </div>
+                        <!-- <div class="header-button">
+                            <a href="#" class="theme-btn theme-btn-2">
+                                <span>
+                                    contact us
+                                    <i class="fas fa-chevron-right"></i>
+                                </span>
+                             </a>
+                        </div> -->
                         <div class="header__hamburger d-xl-block my-auto">
                             <div class="sidebar__toggle">
                                 <div class="header-bar">
