--- a/form.html
+++ b/form.html
@@ -161,7 +161,7 @@
                              </a>
                         </div>
                         <div class="header-button">
-                            <a href="#" class="theme-btn theme-btn-2">
+                            <a href="form.html" class="theme-btn theme-btn-2">
                                 <span>
                                     Join as a Professional
                                     <i class="fas fa-chevron-right"></i>
@@ -176,7 +176,7 @@
                                 </span>
                              </a>
                         </div> -->
-                        <div class="header__hamburger d-xl-block my-auto">
+                        <!-- <div class="header__hamburger d-xl-block my-auto">
                             <div class="sidebar__toggle">
                                 <div class="header-bar">
                                     <span></span>
@@ -184,13 +184,12 @@
                                     <span></span>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</header>
 
 
 
@@ -230,7 +229,7 @@
                 </div>
               </div>
             </div>
-            <button
+            <button onclick="document.location='form-2.html'"
               class="Button_base__5Wcwx Button_lg__UQt1r Button_minWidth__WGVzH Button_textWhite__9w5Wn Button_bgDarkBlue__9V6YV tw-h-[48px] tw-py-2.5 tw-grow-0 tw-shrink-0 tw-whitespace-nowrap"
               data-cy="seller-signup-splash-submit"
             >
@@ -839,9 +838,9 @@
 
 <style>
 
-header.header-section-3 {
+/* header.header-section-3 {
     padding: 18px;
-}
+} */
 
 section.hero-section.hero-3 {
     margin-top: -110px;
