--- a/index-3.html
+++ b/index-3.html
@@ -161,7 +161,7 @@
                              </a>
                         </div>
                         <div class="header-button">
-                            <a href="#" class="theme-btn theme-btn-2">
+                            <a href="form.html" class="theme-btn theme-btn-2">
                                 <span>
                                     Join as a Professional
                                     <i class="fas fa-chevron-right"></i>
@@ -176,7 +176,7 @@
                                 </span>
                              </a>
                         </div> -->
-                        <div class="header__hamburger d-xl-block my-auto">
+                        <!-- <div class="header__hamburger d-xl-block my-auto">
                             <div class="sidebar__toggle">
                                 <div class="header-bar">
                                     <span></span>
@@ -184,7 +184,7 @@
                                     <span></span>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
