--- a/form.html
+++ b/form.html
@@ -601,7 +601,7 @@
             data-cy="seller-signup-splash-rated-excellent"
           >
             <img
-              src="https://d18jakcjgoan9.cloudfront.net/s/img/images/pro-register/rated-excellent-image.jpg!d=PRGs7J"
+              src="assets/img/hero/a-dog-walk-walking-the-dogs-in-the-city-2022-11-08-10-52-58-utc.jpg"
               class="tw-relative tw-left-0 tw-top-0 tw-w-full tw-object-cover"
               alt="Splash"
             />
@@ -929,7 +929,8 @@ p.tw-mt-0.tw-mb-2.tw-text-lg.tw-text-gray-600 {
     padding: 15px 0px;
 }
 .tw-relative {
-    width: 25vw;
+    width: 35vw;
+    padding-top: 50px;
 }
 .tw-container.tw-m-auto.container {
     padding: 50px;
