--- a/form-2.html
+++ b/form-2.html
@@ -217,6 +217,20 @@
     </div>
     
     	<div class="radio-switch">
+    		<p>Are you a freelancer</p>
+<input type="radio" name="younice" id="youniceyes">
+<label class="hw1" for="youniceyes">Yes</label>
+<input type="radio" name="younice" id="youniceno">
+<label class="hw1" for="youniceno">No</label>
+</div>
+    	<div class="radio-switch">
+    		<p>Do you ows a agency</p>
+<input type="radio" name="younice" id="youniceyes">
+<label class="hw1" for="youniceyes">Yes</label>
+<input type="radio" name="younice" id="youniceno">
+<label class="hw1" for="youniceno">No</label>
+</div>
+    	<div class="radio-switch">
     		<p>Does your company have a website?</p>
 <input type="radio" name="younice" id="youniceyes">
 <label class="hw1" for="youniceyes">Yes</label>
