--- a/form-2.html
+++ b/form-2.html
@@ -218,16 +218,16 @@
     
     	<div class="radio-switch">
     		<p>Are you a freelancer</p>
-<input type="radio" name="younice" id="youniceyes">
+<input type="radio" name="younice" id="youniceyes1">
 <label class="hw1" for="youniceyes">Yes</label>
-<input type="radio" name="younice" id="youniceno">
+<input type="radio" name="younice" id="youniceno1">
 <label class="hw1" for="youniceno">No</label>
 </div>
     	<div class="radio-switch">
     		<p>Do you ows a agency</p>
-<input type="radio" name="younice" id="youniceyes">
+<input type="radio" name="younice" id="youniceyes2">
 <label class="hw1" for="youniceyes">Yes</label>
-<input type="radio" name="younice" id="youniceno">
+<input type="radio" name="younice" id="youniceno2">
 <label class="hw1" for="youniceno">No</label>
 </div>
     	<div class="radio-switch">
