--- a/form-2.html
+++ b/form-2.html
@@ -224,7 +224,7 @@
 <label class="hw1" for="youniceno">No</label>
 </div>
     	<div class="radio-switch">
-    		<p>Do you ows a agency</p>
+    		<p>Do you own a agency</p>
 <input type="radio" name="younice" id="youniceyes2">
 <label class="hw1" for="youniceyes">Yes</label>
 <input type="radio" name="younice" id="youniceno2">
